impl GET /spots/{id}
